# sandbox-1

./: README.md  build.jenkinsfile  merge-hell.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  investigation.md
.github/workflows/: announce-prs.yml  close_merged_issues.yml  label_merge_conflicts.yml
cmake/external-data-large-file-bug/: CMakeLists.txt  README.md
cmake/external-project/: CMakeLists.txt
cpp/allocators/: CMakeLists.txt  conanfile.txt  main.cpp
cpp/boost/python/const_ref_self/: CMakeLists.txt  conda.yml  const_ref_self_test.py  environ.cpp
cpp/boost/python/extract_ref/: CMakeLists.txt
cpp/boost/python/extract_ref/src/: DataObjects.cpp  DataObjects.h  DataService.cpp  DataService.h  WorkspaceFactory.cpp  WorkspaceFactory.h  module.cpp
cpp/boost/python/extract_ref/test/: DataServiceTest.py
cpp/boost/python/string_conversion/: CMakeLists.txt  stringy.cpp  test-unicode.py
cpp/boost/python/walkthrough/: CMakeLists.txt  container.cpp  container.h  containeritem.h  core.cpp
cpp/concepts/example/: example.cpp
cpp/crtp/: main.cpp
cpp/move-sematics/: Makefile  main.cpp  matrix.cpp  matrix.h
cpp/python/boostpy-qt/: CMakeLists.txt
cpp/python/boostpy-qt/CMake/: FindPyQt4.cmake
cpp/python/boostpy-qt/src/: CMakeLists.txt
cpp/python/boostpy-qt/src/app/: CMakeLists.txt  main.cpp
cpp/python/boostpy-qt/src/core/: CMakeLists.txt  matrixworkspace.cpp  matrixworkspace.h  workspace.h
cpp/python/boostpy-qt/src/python/: CMakeLists.txt  module.cpp
cpp/python/boostpy-qt/src/qt/: CMakeLists.txt
cpp/python/boostpy-qt/src/qt/python/: CMakeLists.txt  pywidgets.sip
cpp/python/boostpy-qt/src/qt/widgets/: mainwindow.cpp  mainwindow.h
cpp/python/boostpy-qt/src/widgets/: CMakeLists.txt
cpp/python/helloworld23/: .gitignore  CMakeLists.txt  README.md
cpp/python/helloworld23/src/: module.cpp
cpp/python/sanitizers/: CMakeLists.txt  Dockerfile  core.cpp  core.hpp  leak.supp  pycore.cpp  test_sanitizers.py
cpp/python/simpleapi/: Dockerfile  build.sh  dynamic_functions.cpp
cpp/python/sipinherit/: CMakeLists.txt  INamedItem.h  NamedItemRegistry.cpp  NamedItemRegistry.h  README.md  extract.cpp  extract.h  sipinherit.sip  subscribe.py
cpp/qt/dynamic-resources/: CMakeLists.txt  (+1 more)
cpp/qt/embed_python/: .gitignore  CMakeLists.txt  CodeEditor.cpp  code.cpp  code.h  codeeditor.cpp  codeeditor.h  codeeditor.ui  executescript.cpp  executescript.h  forever.py  long.py  main.cpp  mainwindow.cpp  mainwindow.h  pythoninterpreter.cpp  pythoninterpreter.h
cpp/qt/embed_python/CMake/: CompilerSetup.cmake
cpp/qt/embed_python/CMake/compiler/: gnu.cmake
cpp/qt/process-events/: .test_mainwindow.cpp.swp  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  test_mainwindow.cpp  test_mainwindow.h
cpp/readbin/: CMakeLists.txt
cpp/readbin/src/: BinaryFileReader.cpp  BinaryFileReader.h  main.cpp
cpp/ref-qualifier/: ref-qualifier  ref-qualifier.cpp
cpp/sfinae/: main.cpp
cpp/singleton/: CMakeLists.txt  Foo.cpp  Foo.h  FooModule.h  SingletonHolder.h  main.cpp
cpp/tbb/: Unit.cpp  Unit.h  build.ninja  main.cpp
cpp/typedvalue/: Makefile  PropertyManager.h  main.cpp
debian/cowbuilder/: README.md  create-cowbuilder-env.sh  pbuilderrc
docker/apache-wsgi-centos/: Dockerfile  README.md  run-httpd.sh  sandbox.conf  upload.wsgi
docker/ipython/: Dockerfile  start.sh
docker/mantid/: Dockerfile
docker/mediawiki/: docker-compose.yml  playbook.yml  setup-docker.yml  staging.yml
docker/qtapp/: Dockerfile  README.md
graphql/: close_merged_issues.py  delete_branches.py  graphql_example.py  is_pullrequest_mergeable.sh  stale_branches.py
jenkins/: TEST-systemtests-0.xml  TEST-systemtests-1.xml  build.jenkinsfile  test-buildscript  test_runner.bat  unittest-linux.xml  unittest-win.xml  unittest.xml
python/: descriptors.py  jenkins_slave_check.py  keymove.py
python/contextmanagers/: context_exceptions.py
python/git/: test_git.py
python/lazydoc/: lazydoc.py
python/matplotlib/: .gitignore  Dockerfile  README.md
python/matplotlib/cppwidget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MplPlot.cpp  MplPlot.h  _mplcpp.sip  main.cpp
python/matplotlib/cppwidget/applications/: CMakeLists.txt
python/matplotlib/cppwidget/applications/sample/: CMakeLists.txt
python/matplotlib/cppwidget/applications/sample/src/: MainWindow.cpp  MainWindow.h  main.cpp
python/matplotlib/cppwidget/cmake/: CMakeLists.txt.cxxtest.in  FindCxxTest.cmake  FindPyQt.py  FindPyQt5.cmake  PathManipulations.cmake  PyQtFindImpl.cmake  QtTargetFunctions.cmake
python/matplotlib/cppwidget/include/: MplFigureCanvas.h  MplPlot.h
python/matplotlib/cppwidget/qt4-target/: CMakeLists.txt
python/matplotlib/cppwidget/qt5-target/: CMakeLists.txt
python/matplotlib/cppwidget/src/: MainWindow.cpp  MplFigureCanvas.cpp
python/matplotlib/cppwidget/widgets/: CMakeLists.txt
python/matplotlib/cppwidget/widgets/mplcpp/: CMakeLists.txt
python/matplotlib/cppwidget/widgets/mplcpp/include/: MplAxes.h  MplFigureCanvas.h  MplPlotWidget.h  NDArray1D.h  Numpy.h  PythonErrors.h  PythonObject.h  SipUtils.h  WrapPython.h
python/matplotlib/cppwidget/widgets/mplcpp/src/: MplAxes.cpp  MplFigureCanvas.cpp  MplPlot.cpp  MplPlotWidget.cpp  NDArray1D.cpp  Numpy.cpp  PythonErrors.cpp  PythonObject.cpp  SipUtils.cpp
python/matplotlib/cppwidget/widgets/mplcpp/test/: CMakeLists.txt  GlobalInitialization.h  MplFigureCanvasTest.h  NDArray1DTest.h  PythonObjectTest.h
python/movecursor/: keymove.py
python/record/: record_calls.py
python/sipv6/cmake-finder/: .cmake-format.json  CMakeLists.txt  InfoWidget.cpp  InfoWidget.h  _common.sip  test_infowidget.py
python/sipv6/cmake-finder/lib/: CMakeLists.txt  InfoWidget.cpp  InfoWidget.h
python/sipv6/cmake-finder/lib/bindings/pylib/: CMakeLists.txt  _common.sip
python/sipv6/cmake-finder/modules/: FindSIP.cmake  PyQtFindImpl.cmake  SipQtTargetFunctions.cmake
python/sipv6/cmake-finder/modules/sip-build/: project.py.in  pyproject.toml.in
python/sipv6/cmake-finder/tools/sip/: sipwrapper.py
rust/adventofcode/: Cargo.toml
(+57 files in other folders)
