################################################################################
# Application executable
################################################################################
set( SRCS
  main.cpp
)

################################################################################
# Executable
################################################################################
add_executable( app ${SRCS} )
target_link_libraries( app LINK_PRIVATE widgets ${QT_LIBRARIES} )
