################################################################################
# Core library
################################################################################
set( HDRS
  workspace.h
  matrixworkspace.h
)
set( SRCS
  matrixworkspace.cpp
)

################################################################################
# Executable
################################################################################
add_library( core ${SRCS} ${HDRS} )
target_link_libraries( core )
